--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -9,12 +9,19 @@
 
     <h1>Index Page</h1>
 
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
 
-
+        <tr th:each="customer : ${customerList}">
+            <td th:text="${customer.firstName}"/>
+            <td th:text="${customer.lastName}"/>
+            <td th:text="${customer.email}"/>
+        </tr>
+    </table>
 
 
 
