--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -23,6 +23,7 @@
             <td th:text="${customer.firstName}"/>
             <td th:text="${customer.lastName}"/>
             <td th:text="${customer.email}"/>
+            <td><a th:href="@{edit__${customer.id}__}">Update</a></td>
             <td><a th:href="@{delete/__${customer.id}__}"
                    onclick="if (!(confirm('Are you sure you want to delete this customer?'))) return false">Delete</a></td>
         </tr>
